--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
       <div class="container-fluid hero">
         <div class="row konten-tengah">
+          
           <div class="col-xl-6 col-lg-6 col-md-12 logo">
-            <img src="img/logo-hydro.png" alt="">
+            <img src="img/logo-hydro.png" alt="logo">
             <h1>Bisnis HYDRO 9+ Peluang Terbaik Tahun Ini</h1>
             <p>HYDRO 9+ Adalah Mineral Alkaline Concentrate terbuat dari 
               Natrium, Calcium, Magnesium, Zinc, Zat Besi, dan lainnya yang di 
@@ -27,9 +28,11 @@
               menghasilkan trace mineral/padat mineral yang diambil adalah 
               Anion (-) dengan pH Basa yang kuat (Alkaline Strong pH 14).</p>
           </div>
+
           <div class="col-xl-6 col-lg-6 col-md-12 gambar-produk">
             <img src="img/produk.png" class="img-fluid" alt="HYDRO 9+">
           </div>
+
         </div>
       </div>
 
