--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <div class="container-fluid hero">
         <div class="row konten-tengah">
-          
+
           <div class="col-xl-6 col-lg-6 col-md-12 logo">
             <img src="img/logo-hydro.png" alt="logo">
             <h1>Bisnis HYDRO 9+ Peluang Terbaik Tahun Ini</h1>
@@ -36,9 +36,30 @@
         </div>
       </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-6 col-md-6"></div>
+    <div class="container-fluid ctn">
+
+      <div class="row konten-tengah">
+
+        <div class="col-xl-12 col-lg-12 col-md-12 box">
+          <div class="row konten-tengah">
+
+            <div class="col-xl-6 col-lg-6 col-md-12 tulisan">
+              <h5>TESTIMONI</h5>
+              <h1>Apa Kata Mereka Tentang HYDRO 9+</h1>
+            </div>
+
+            <div class="col-xl-6 col-lg-6 col-md-12 video">
+              <div id="video">
+                <video controls poster="">
+                    <source src="media/testimoni.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            </div>
+
+          </div>
+        </div>
+
       </div>
     </div>
 
