--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
 
-    <div class="container-fluid ctn">
+    <div class="container-fluid ctn box-shadow">
 
       <div class="row konten-tengah">
 
