--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </div>
 
           <div class="col-xl-6 col-lg-6 col-md-12 gambar-produk">
-            <img src="img/produk.png" class="img-fluid" alt="HYDRO 9+">
+            <img src="img/produk.png" alt="HYDRO 9+">
           </div>
 
         </div>
