added new section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,41 @@
       </div>
     </div>
 
+    <div class="container">
+      <div class="row konten-atas">
+
+        <div class="col-xl-6 col-lg-6 col-md-12 text-area">
+          <h3>Cara Menggunakan HYDRO 9+</h3>
+          <p>Teteskan 1 tetes HYDRO9+ ke dalam air 500ml - 600ml, air 
+            tersebut akan menjadi Air Alkali dengan pH 8,5-9. Simple & 
+            Praktis. Bisa diminum di mana saja dan kapan saja.
+            <br><br>
+            3 Karakter utama HYDRO9+ seperti karakter Air Ajaib yang 
+            terdapat di Mekkah Saudia Arabia (Air Zam-Zam), Lourdes 
+            di Perancis, Nordenau di Jerman, Tlacote di Mexico, dan 
+            lainnya yaitu ALKALI/BASA, SUPER ANTI OKSIDANT, MICRO 
+            CLUSTERED.</p>
+        </div>
+
+        <div class="col-xl-6 col-lg-6 col-md-12 text-area">
+          <h3>4 Kelebihan HYDRO 9+</h3>
+          <p>Air minum bisa disebut air alkaline jika mengandung 
+            banyak mineral organic serta memiliki 4 kemampuan:</p>
+
+            <ol>
+              <li>Membersihkan racun kimia dalam tubuh</li>
+              <li>Mengatur Ulang fungsi organ tubuh</li>
+              <li>Menambah vitalitas/stamina</li>
+              <li>Melindungi sel tubuh dari kerusakan akibat paparan radikal bebas</li>
+            </ol>
+
+            
+
+            
+        </div>
+
+      </div>
+    </div>
 
 
 
