--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <source src="media/testimoni.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
-            </div>
+              </div>
             </div>
 
           </div>
@@ -89,18 +89,64 @@
               <li>Mengatur Ulang fungsi organ tubuh</li>
               <li>Menambah vitalitas/stamina</li>
               <li>Melindungi sel tubuh dari kerusakan akibat paparan radikal bebas</li>
-            </ol>
-
-            
-
-            
+            </ol>    
         </div>
 
       </div>
     </div>
 
+    <div class="container-fluid ctn box-shadow">
 
+      <div class="row konten-tengah">
 
+        <div class="col-xl-12 col-lg-12 col-md-12 box">
+          <div class="row konten-tengah">
+
+            <div class="col-xl-12 col-lg-12 col-md-12 demonstrasi">
+              <h1>Video Demonstrasi</h1>
+            </div>
+
+            <div class="col-xl-6 col-lg-6 col-md-12 video">
+              <div id="video">
+                <video controls poster="media/thumb/demo1.png">
+                    <source src="media/demo1.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+              </div>
+            </div>
+
+            <div class="col-xl-6 col-lg-6 col-md-12 video">
+              <div id="video">
+                <video controls poster="media/thumb/demo2.png">
+                    <source src="media/demo2.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+              </div>
+            </div>
+
+            <div class="col-xl-6 col-lg-6 col-md-12 video">
+              <div id="video">
+                <video controls poster="media/thumb/demo3.png">
+                    <source src="media/demo3.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+              </div>
+            </div>
+
+            <div class="col-xl-6 col-lg-6 col-md-12 video">
+              <div id="video">
+                <video controls poster="media/thumb/demo4.png">
+                    <source src="media/demo4.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
 
 
 
