added new section

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/body.css">
     <link rel="stylesheet" href="css/main.css">
+
 
 
     <title>HYDRO 9+</title>
@@ -149,7 +152,107 @@
       </div>
     </div>
 
-    
+    <div class="container">
+      <div class="row konten-tengah para-ahli">
+
+        <div class="col-xl-12 col-lg-12 col-md-12 h1-tengah">
+          <h1>Apa Kata Para Ahli</h1>
+        </div>
+
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/1.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/2.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/3.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/4.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/5.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/6.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/7.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/8.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/9.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/10.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/11.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/12.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/13.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/14.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/15.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/16.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/17.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/18.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/19.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/20.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/21.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/22.png" alt="para-ahli">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
+          <img src="img/para-ahli/23.png" alt="para-ahli">
+        </div>
+
+      </div>
+    </div>
+
+    <hr style="width: 80%; border: solid 1pt rgb(185, 185, 185); margin: 100px auto;">
+
+
+    <div class="container">
+      <div class="row konten-tengah">
+
+        <div class="col-xl-12 col-lg-12 col-md-12 h1-tengah">
+          <h1>6 Kelebihan Anda harus Bergabung Sekarang Juga!</h1>
+        </div>
+
+        <div class="col-xl-6 col-lg-6 col-md-12 Kelebihan">
+              <img src="img/icon/bag.png" alt="icon">
+              <h5>Produk Evergreen</h5>
+              <p>Produk Hydro 9+ bukanlah produk musiman karena air minum berkualitas selalu dibutuhkan sampai akhir hayat.</p>
+        </div>
+
+      </div>
+    </div>
+
+
+
 
 
 
