added new section

--- a/index.html
+++ b/index.html
@@ -160,73 +160,73 @@
         </div>
 
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/1.png" alt="para-ahli">
+          <img src="img/para-ahli/1.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/2.png" alt="para-ahli">
+          <img src="img/para-ahli/2.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/3.png" alt="para-ahli">
+          <img src="img/para-ahli/3.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/4.png" alt="para-ahli">
+          <img src="img/para-ahli/4.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/5.png" alt="para-ahli">
+          <img src="img/para-ahli/5.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/6.png" alt="para-ahli">
+          <img src="img/para-ahli/6.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/7.png" alt="para-ahli">
+          <img src="img/para-ahli/7.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/8.png" alt="para-ahli">
+          <img src="img/para-ahli/8.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/9.png" alt="para-ahli">
+          <img src="img/para-ahli/9.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/10.png" alt="para-ahli">
+          <img src="img/para-ahli/10.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/11.png" alt="para-ahli">
+          <img src="img/para-ahli/11.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/12.png" alt="para-ahli">
+          <img src="img/para-ahli/12.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/13.png" alt="para-ahli">
+          <img src="img/para-ahli/13.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/14.png" alt="para-ahli">
+          <img src="img/para-ahli/14.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/15.png" alt="para-ahli">
+          <img src="img/para-ahli/15.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/16.png" alt="para-ahli">
+          <img src="img/para-ahli/16.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/17.png" alt="para-ahli">
+          <img src="img/para-ahli/17.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/18.png" alt="para-ahli">
+          <img src="img/para-ahli/18.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/19.png" alt="para-ahli">
+          <img src="img/para-ahli/19.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/20.png" alt="para-ahli">
+          <img src="img/para-ahli/20.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/21.png" alt="para-ahli">
+          <img src="img/para-ahli/21.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/22.png" alt="para-ahli">
+          <img src="img/para-ahli/22.jpg" alt="para-ahli">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 konten-tengah">
-          <img src="img/para-ahli/23.png" alt="para-ahli">
+          <img src="img/para-ahli/23.jpg" alt="para-ahli">
         </div>
 
       </div>
@@ -246,6 +246,31 @@
               <img src="img/icon/bag.png" alt="icon">
               <h5>Produk Evergreen</h5>
               <p>Produk Hydro 9+ bukanlah produk musiman karena air minum berkualitas selalu dibutuhkan sampai akhir hayat.</p>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-12 Kelebihan">
+          <img src="img/icon/money.png" alt="icon">
+          <h5>Modal Mini Hasil Maxi</h5>
+          <p>Paket Join di NTR relative ringan dengan potensi income miliaran rupiah.</p>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-12 Kelebihan">
+          <img src="img/icon/chart.png" alt="icon">
+          <h5>Income Fantastis</h5>
+          <p>Bisnis Plan terbaik saat ini, sangat mudah dipahami, unik namun sangat powerfull untuk meledakkan income anda.</p>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-12 Kelebihan">
+          <img src="img/icon/web.png" alt="icon">
+          <h5>Website Replika</h5>
+          <p>Setiap member kami mendapatkan link Web Replika untuk membantu promosi online.</p>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-12 Kelebihan">
+          <img src="img/icon/grup.png" alt="icon">
+          <h5>Group Support</h5>
+          <p>Anda akan di bantu oleh mentor dan tim support yang sudah  berpengalaman tentang marketing untuk membimbing anda secara offline/online.</p>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-12 Kelebihan">
+          <img src="img/icon/megaphone.png" alt="icon">
+          <h5>Konten Promosi</h5>
+          <p>Kami sudah siapkan konten- konten untuk membantu anda produksi sehingga anda tinggal copy/paste aja dan nikmati hasil closing.</p>
         </div>
 
       </div>
