--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       </div>
     </div>
 
-    <hr style="width: 80%; border: solid 1pt rgb(185, 185, 185); margin: 100px auto;">
+    <hr style="width: 80%; outline: 1px; margin: 100px auto;">
 
 
     <div class="container">
