added new section

--- a/index.html
+++ b/index.html
@@ -276,6 +276,59 @@
       </div>
     </div>
 
+    <div class="container-fluid ctn box-shadow">
+
+      <div class="row konten-tengah">
+
+        <div class="col-xl-12 col-lg-12 col-md-12 box">
+          <div class="row konten-tengah">
+
+            <div class="col-xl-12 col-lg-12 col-md-12 galeri">
+              <h1>Galeri</h1>
+            </div>
+
+            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
+              <img src="img/galeri/1.png" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
+              <img src="img/galeri/2.jpeg" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
+              <img src="img/galeri/3.png" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
+              <img src="img/galeri/4.png" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
+              <img src="img/galeri/5.png" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
+              <img src="img/galeri/6.png" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
+              <img src="img/galeri/7.jpeg" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
+              <img src="img/galeri/8.jpeg" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
+              <img src="img/galeri/9.jpeg" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
+              <img src="img/galeri/10.jpeg" alt="">
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+      
+    </div>
+
+    <div class="background">
+      <p>Copyright © 2021 HYDRO 9+ | All Rights Reserved</p>
+    </div>
+
 
 
 
