--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
           <div class="col-xl-6 col-lg-6 col-md-12 logo">
             <img src="img/logo-hydro.png" alt="logo">
-            <h1>Bisnis HYDRO 9+ Peluang Terbaik Tahun Ini</h1>
+            <h1>Peluang Bisnis Terbaik Tahun Ini </h1>
             <p>HYDRO 9+ Adalah Mineral Alkaline Concentrate terbuat dari 
               Natrium, Calcium, Magnesium, Zinc, Zat Besi, dan lainnya yang di 
               larutkan ke dalam Air Murni (TDS 0ppm) menggunakan energy 
