--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="css/body.css">
     <link rel="stylesheet" href="css/main.css">
-
+    <link rel="stylesheet" href="slider.js">
 
 
     <title>HYDRO 9+</title>
@@ -333,6 +333,14 @@
 
 
 
+    <div class="container">
+      <div class="row">
+        <div class="col">
+
+
+        </div>
+      </div>
+    </div>
 
 
 
