--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       </div>
     </div>
 
-    <hr style="width: 80%; outline: 1px; margin: 100px auto;">
+    <hr style="width: 80%; outline: 1px; margin-bottom: 100px; margin-top: -50px;">
 
 
     <div class="container">
