--- a/index.html
+++ b/index.html
@@ -251,6 +251,41 @@
 
     <hr style="width: 80%; outline: 1px; margin-bottom: 100px; margin-top: -50px;">
 
+<div class="container">
+  <div class="row konten-tengah">
+
+    <div class="col-xl-12 col-lg-12 col-md-12 h1-tengah">
+      <h1>Marketing Plan</h1>
+    </div>
+
+
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="..." alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="..." alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="..." alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+  </div>
+</div>
+
+
+<hr style="width: 80%; outline: 1px; margin: 100px auto;">
 
     <div class="container">
       <div class="row konten-tengah">
