--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <div class="col-xl-6 col-lg-6 col-md-12 tulisan">
               <h5>TESTIMONI</h5>
-              <h1>Apa Kata Mereka Tentang HYDRO 9+</h1>
+              <h1>Kata Mereka Tentang HYDRO 9+</h1>
             </div>
 
             <div class="col-xl-6 col-lg-6 col-md-12 video">
