--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
+  </div>
 
   </div>
 </div>
@@ -391,37 +392,62 @@
               <h1>Galeri</h1>
             </div>
 
-            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
-              <img src="img/galeri/1.png" alt="">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="img/galeri/1.png" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="img/galeri/2.jpeg" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="img/galeri/3.png" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="img/galeri/4.png" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="img/galeri/5.png" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="img/galeri/6.png" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="img/galeri/7.jpeg" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="img/galeri/8.jpeg" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="img/galeri/9.jpeg" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="img/galeri/10.jpeg" alt="">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
-              <img src="img/galeri/2.jpeg" alt="">
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
-              <img src="img/galeri/3.png" alt="">
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
-              <img src="img/galeri/4.png" alt="">
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
-              <img src="img/galeri/5.png" alt="">
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
-              <img src="img/galeri/6.png" alt="">
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
-              <img src="img/galeri/7.jpeg" alt="">
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
-              <img src="img/galeri/8.jpeg" alt="">
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
-              <img src="img/galeri/9.jpeg" alt="">
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 galeri">
-              <img src="img/galeri/10.jpeg" alt="">
-            </div>
-
+            
           </div>
         </div>
 
