--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           <div class="col-xl-6 col-lg-6 col-md-12 logo">
             <img src="img/logo-hydro.png" alt="logo">
             <h1>Peluang Bisnis Terbaik Tahun Ini </h1>
+ <br>
+            <h5>Jika Anda merasa mulut kering, jarang buang air, kelelahan, sembelit, kulit kering, dan nyeri sendi, artinya Anda kekurangan Air didalam tubuh Anda.</h5>
+
             <p>HYDRO 9+ Adalah Mineral Alkaline Concentrate terbuat dari 
               Natrium, Calcium, Magnesium, Zinc, Zat Besi, dan lainnya yang di 
               larutkan ke dalam Air Murni (TDS 0ppm) menggunakan energy 
@@ -76,29 +79,38 @@
       <div class="row konten-atas">
 
         <div class="col-xl-6 col-lg-6 col-md-12 text-area">
-          <h3>Cara Menggunakan HYDRO 9+</h3>
-          <p>Teteskan 1 tetes HYDRO9+ ke dalam air 500ml - 600ml, air 
-            tersebut akan menjadi Air Alkali dengan pH 8,5-9. Simple & 
-            Praktis. Bisa diminum di mana saja dan kapan saja.
-            <br><br>
+          <h3>8 Manfaat HYDRO 9+</h3>
+
+            <ol>
+              <li>Memperlancar sistem pencernaan</li>
+              <li>Menghambat tumbuhnya sel kanker</li>
+              <li>Anti aging & merawat kecantikan</li>
+              <li>Untuk stamina, kesuburan & promil</li>
+              <li>Untuk diet & kebugaran</li>
+              <li>Penyakit kulit dan mata</li>
+              <li>Penyeimbang pH tubuh</li>
+              <li>Menyembuhkan berbagai penyakit modern, kronis dan lainnya</li>
+            </ol>    
+        </div>
+
+        <div class="col-xl-6 col-lg-6 col-md-12 text-area">
+          <h3>Aturan Pakai HYDRO 9+</h3>
+          <p>
             3 Karakter utama HYDRO9+ seperti karakter Air Ajaib yang 
             terdapat di Mekkah Saudia Arabia (Air Zam-Zam), Lourdes 
             di Perancis, Nordenau di Jerman, Tlacote di Mexico, dan 
             lainnya yaitu ALKALI/BASA, SUPER ANTI OKSIDANT, MICRO 
-            CLUSTERED.</p>
-        </div>
+            CLUSTERED.
+            <br><br>
+            Setiap tetes HYDRO 9+ menjadikan air biasa pH < 7 menjadi Alkaline pH > 8:</p>
 
-        <div class="col-xl-6 col-lg-6 col-md-12 text-area">
-          <h3>4 Kelebihan HYDRO 9+</h3>
-          <p>Air minum bisa disebut air alkaline jika mengandung 
-            banyak mineral organic serta memiliki 4 kemampuan:</p>
-
-            <ol>
-              <li>Membersihkan racun kimia dalam tubuh</li>
-              <li>Mengatur Ulang fungsi organ tubuh</li>
-              <li>Menambah vitalitas/stamina</li>
-              <li>Melindungi sel tubuh dari kerusakan akibat paparan radikal bebas</li>
-            </ol>    
+            <ul>
+              <li>1 tetes untuk air 600ml (Pecegahan)</li>
+              <li>2 tetes untuk air 600ml (Terapi)</li>
+              <li>3 tetes untuk air 600ml (Pengobatan)</li>
+              <li>3 tetes untuk air 100ml (Spray Wajah)</li>
+              <li>5 s/d 20 tetes untuk air 100ml (Penyakit Kulit)</li>
+            </ul>    
         </div>
 
       </div>
